InsureFlow360/force-app/main/default/objects/Fraud_Alert__c/Fraud_Alert__c.object-meta.xml
<CustomObject>
    <label>Fraud Alert</label>
    <nameField>
        <displayFormat>FRA-{00000}</displayFormat>
        <label>Fraud Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraud Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>