InsureFlow360/force-app/main/default/objects/Fraud_Alert__c/fields/Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Date__c</fullName>
    <label>Alert Date</label>
    <inlineHelpText>Enter the Alert Date.</inlineHelpText>
    <type>Date</type>
</CustomField>