InsureFlow360/force-app/main/default/objects/Fraud_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
  <fullName>Alert_Type__c</fullName>
  <label>Alert Type</label>
  <inlineHelpText>Select the current Alert Type.</inlineHelpText>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>Duplicate Claim</fullName>
      </value>
      <value>
        <fullName>High Claim Amount</fullName>
      </value>
      <value>
        <fullName>Suspicious Activity</fullName>
      </value>
      <value>
        <fullName>Multiple Claims</fullName>
      </value>
      <value>
        <fullName>Fake Documents</fullName>
      </value>
      <value>
        <fullName>Policy Abuse</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>