InsureFlow360/force-app/main/default/objects/Fraud_Alert__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <inlineHelpText>Select the related Claim.</inlineHelpText>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Fraud Alerts</relationshipLabel>
    <relationshipName>Fraud_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>