InsureFlow360/force-app/main/default/objects/Fraud_Alert__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <inlineHelpText>Provide the Description details.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>