InsureFlow360/force-app/main/default/objects/Fraud_Alert__c/fields/Severity__c.field-meta.xml
<CustomField>
  <fullName>Severity__c</fullName>
  <label>Severity</label>
  <inlineHelpText>Select the current Severity.</inlineHelpText>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>Low</fullName>
      </value>
      <value>
        <fullName>Medium</fullName>
      </value>
      <value>
        <fullName>High</fullName>
      </value>
      <value>
        <fullName>Critical</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>